Update Event Page

--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
@@ -5,8 +5,7 @@
 }
 
 <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
-
-<component type="typeof(OpenCRM.Core.Web.Components.Table)" render-mode="ServerPrerendered" param-columns="Model.TableColumns" />
+<component type="typeof(OpenCRM.Core.Web.Components.Table)" render-mode="ServerPrerendered" param-rows="Model.TableRows" param-headers="Model.TableHeaders"/>
 
 <div class="card">
     <div class="card-header d-flex justify-content-between">
