--- a/Core/OpenCRM.Core.Web/Components/Table.razor
+++ b/Core/OpenCRM.Core.Web/Components/Table.razor
@@ -1,54 +1,62 @@
-﻿<h3>Table</h3>
-
-
-<table id="datatablesSimple">
-    <thead>
-        <tr>
-            @foreach (var item in Columns)
-            {
-                <th>
-                    @item.Header
-                </th>
-            }
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var column in Columns)
-        {
-            <tr>
-                @foreach (var item in Columns)
-                {
-                    @if (item.IsButton)
+﻿
+<div class="card">
+    <div class="card-header d-flex justify-content-between">
+        <div>
+            <i class="fas fa-table me-1"></i>
+            Events
+        </div>
+        <div>
+            <a class="btn btn-success" href="/SwissLDP/Event/Create" data-toggle="tooltip" data-placement="top" title="Create new event">Create new</a>
+        </div>
+    </div>
+    <div class="card-body">
+        <table id="datatablesSimple">
+            <thead>
+                <tr>
+                    @foreach(var item in Headers)
                     {
-                        <td>
-                            <a class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="top" title="Edit">
-                                <i class="fas fa-pen"></i>
-                                @item.Label
-                            </a>
-                        </td>
-                    } else
-                    {
-                        <td>
-                            @item.Label
-                        </td>
+                        <th> 
+                            @item
+                        </th>
                     }
-                    
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var row in Rows)
+                {
+                    <tr>
+                        @foreach(var item in row.Datas)
+                        {
+                            @if (item.IsButton)
+                            {
+                                <td>
+                                    <a class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="top" title="@item.Label" href="'@item.Url" >
+                                        <i class="@item.IconName"></i>
+                                    </a>
+                                </td>
+                            }   
+                            else
+                            {
+                                <td>
+                                    @item.Label
+                                </td>
+                            }
+                        }
+                    </tr>
                 }
-               @*  <td>
-                    <a class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pen"></i></a>
-                </td>
-                <td>
-                    <a class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="Details"><i style="color:white" class="fas fa-info-circle" aria-hidden="true"></i></a>
-                </td>
-                <td>
-                    <a class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash"></i></a>
-                </td> *@
-            </tr>
-        }
-    </tbody>
-</table>
+            </tbody>
+        </table>
+    </div>
+</div>
 
 @code {
+
     [Parameter]
-    public List<TableColumn> Columns { get; set; } = new List<TableColumn>();
+    public List<string> Headers { get; set; } = new List<string>();
+
+    [Parameter]
+    public List<TableRow<TRowData>> Rows { get; set; } = new List<TableRow<TRowData>>();
 }
