Update Table Component

--- a/Core/OpenCRM.Core.Web/Components/Table.razor
+++ b/Core/OpenCRM.Core.Web/Components/Table.razor
@@ -33,7 +33,7 @@
                             @if (item.IsButton)
                             {
                                 <td>
-                                    <a class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="top" title="@item.Label" href="'@item.Url" >
+                                    <a class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="top" title="@item.Label" href="@item.Url" >
                                         <i class="@item.IconName"></i>
                                     </a>
                                 </td>
