--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
@@ -5,69 +5,10 @@
 }
 
 <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
-<component type="typeof(OpenCRM.Core.Web.Components.Table)" render-mode="ServerPrerendered" param-rows="Model.TableRows" param-headers="Model.TableHeaders"/>
 
-<div class="card">
-    <div class="card-header d-flex justify-content-between">
-        <div>
-            <i class="fas fa-table me-1"></i>
-            Events
-        </div>
-        <div>
-            <a class="btn btn-success" asp-page="Create" data-toggle="tooltip" data-placement="top" title="Create new event">Create new</a>
-        </div>
-    </div>
-    <div class="card-body">
-        @*<partial name="_TablePartial" model="Model.TablePartialModel"/>*@
-        <table id="datatablesSimple">
-            <thead>
-                <tr>
-                    <th>
-                        ID
-                    </th>
-                    <th>
-                        Description
-                    </th>
-                    <th>
-                        StartDate
-                    </th>
-                    <th>
-                        EndDate
-                    </th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.EventList)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ID)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Data.Description)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Data.StartDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Data.EndDate)
-                        </td>
-                        <td>
-                            <a class="btn btn-primary btn-sm" asp-page="./Edit" asp-route-id="@item.ID" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pen"></i></a>
-                        </td>
-                        <td>
-                            <a class="btn btn-warning btn-sm" asp-page="./Details" asp-route-id="@item.ID" data-toggle="tooltip" data-placement="top" title="Details"><i style="color:white" class="fas fa-info-circle" aria-hidden="true"></i></a>
-                        </td>
-                        <td>
-                            <a class="btn btn-danger btn-sm" asp-page="./Delete" asp-route-id="@item.ID" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash"></i></a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</div>
-
+<component type="typeof(OpenCRM.Core.Web.Table.Table)" render-mode="ServerPrerendered" 
+    param-title="Model.Title" 
+    param-page="Model.TablePage" 
+    param-rows="Model.TableRows" 
+    param-headers="Model.TableHeaders" 
+/>
