--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/_ViewImports.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using OpenCRM.Core.Web
 @using OpenCRM.Core.Web.Components
+@using OpenCRM.Core.Web.Table
 @namespace OpenCRM.SwissLPD
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
