--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
@@ -7,7 +7,7 @@
 
 <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
 
-<component type="typeof(OpenCRM.Core.Web.Table.Table)" render-mode="ServerPrerendered" 
+<component type="typeof(OpenCRM.Core.Web.Components.Table.Table)" render-mode="ServerPrerendered" 
     param-title="Model.Title" 
     param-page="Model.TablePage" 
     param-rows="Model.TableRows" 
