--- a/Core/OpenCRM.Core.Web/Pages/_ViewImports.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@namespace OpenCRM.Core.Web
+﻿@using OpenCRM.Core.Web.Components
+@namespace OpenCRM.Core.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
