Remove _ViewStart from non Core Web projects

--- a/Modules/OpenCRM.Finance/Areas/Finance/_ViewImports.cshtml
+++ b/Modules/OpenCRM.Finance/Areas/Finance/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿
+@using OpenCRM.Core.Web.Pages
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
