--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
@@ -2,6 +2,7 @@
 @model OpenCRM.SwissLPD.Areas.SwissLDP.Pages.Event.IndexModel
 @{
     ViewData["Title"] = "Index";
+    Layout = "_CoreLayout";
 }
 
 <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
