--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/_ViewImports.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using OpenCRM.Core.Web
 @using OpenCRM.Core.Web.Components
 @using OpenCRM.Core.Web.Table
+@using OpenCRM.Core.Web.Pages
+@using OpenCRM.Core.Web.Pages.Shared
 @namespace OpenCRM.SwissLPD
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
