Added Email Register Confirmation with generic Smtp Email Sender, Added partial LoginPartial view necessary for Identity, Fixed not saving Name and Last Name in database

--- a/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
@@ -38,6 +38,8 @@
                                 <li><a class="dropdown-item" asp-area="SwissLDP" asp-page="/Event/Index">Swiss LDP Events</a></li>
                                 <li><a class="dropdown-item" asp-area="Finance" asp-page="/Index">Finance</a></li>
                                 <li><a class="dropdown-item" asp-area="Finance" asp-page="/Accounting/Index">Finance Accounting</a></li>
+                                <li><a class="dropdown-item" asp-area="Identity" asp-page="/Register/Index">Register</a></li>
+                                <li><a class="dropdown-item" asp-area="Identity" asp-page="/Auth/Index">Login</a></li>
                             </ul>
                         </li>
                         
