--- a/Core/OpenCRM.Core.Web/Areas/Identity/Pages/Register/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Identity/Pages/Register/Index.cshtml
@@ -24,9 +24,9 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-floating">
-                                                <input asp-for ="Input.LastName" class="form-control" placeholder="Enter your last name" />
-                                                <label asp-for="Input.LastName" >Last name</label>
-                                                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                                                <input asp-for ="Input.Lastname" class="form-control" placeholder="Enter your last name" />
+                                                <label asp-for="Input.Lastname" >Last name</label>
+                                                <span asp-validation-for="Input.Lastname" class="text-danger"></span>
                                             </div>
                                         </div>
                                     </div>
