--- a/OpenCRM.Web/Pages/Shared/_Layout.cshtml
+++ b/OpenCRM.Web/Pages/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                                 <li><a class="dropdown-item" asp-area="Finance" asp-page="/Index">Finance</a></li>
                                 <li><a class="dropdown-item" asp-area="Finance" asp-page="/Accounting/Index">Finance Accounting</a></li>
                                 <li><a class="dropdown-item" asp-area="Identity" asp-page="/Register/Index">Register</a></li>
-                                <li><a class="dropdown-item" asp-area="Identity" asp-page="/Auth/Index">Login</a></li>
+                                <li><a class="dropdown-item" asp-area="Identity" asp-page="/Auth/Index">LoginA</a></li>
                             </ul>
                         </li>
                         
