Add Layout on event pages

--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Create.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Create.cshtml
@@ -2,6 +2,7 @@
 @model OpenCRM.SwissLPD.Areas.SwissLDP.Pages.Event.CreateModel
 @{
 	ViewData["Title"] = "Create";
+    Layout = "_CoreLayout";
 }
 
 <div class="container-fluid">
