--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Edit.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Edit.cshtml
@@ -2,6 +2,7 @@
 @model OpenCRM.SwissLPD.Areas.SwissLDP.Pages.Event.EditModel
 @{
     ViewData["Title"] = "Edit";
+    Layout = "_CoreLayout";
 }
 
 <div class="container-fluid">
