--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Delete.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Delete.cshtml
@@ -2,6 +2,7 @@
 @model OpenCRM.SwissLPD.Areas.SwissLDP.Pages.Event.DeleteModel
 @{
     ViewData["Title"] = "Delete";
+    Layout = "_CoreLayout";
 }
 
 <div class="container-fluid">
