--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Details.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Details.cshtml
@@ -2,6 +2,7 @@
 @model OpenCRM.SwissLPD.Areas.SwissLDP.Pages.Event.DetailsModel
 @{
 	ViewData["Title"] = "Details";
+    Layout = "_CoreLayout";
 }
 
 <div class="container-fluid">
