Added Supplier Register Page & TableModel

--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
@@ -8,8 +8,8 @@
 <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
 
 <component type="typeof(OpenCRM.Core.Web.Components.Table.Table)" render-mode="ServerPrerendered" 
-    param-title="Model.Title" 
-    param-page="Model.TablePage" 
-    param-rows="Model.TableRows" 
-    param-headers="Model.TableHeaders" 
+    param-title="Model.Table.Title"
+    param-page="Model.Table.TablePage"
+    param-rows="Model.Table.TableRows"
+    param-headers="Model.Table.TableHeaders" 
 />
