--- a/Core/OpenCRM.Core.Web/Areas/Identity/Pages/ConfirmEmail/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Identity/Pages/ConfirmEmail/Index.cshtml
@@ -12,7 +12,9 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Confirm email</h3></div>
                             <div class="card-body">
-                                <partial name="_StatusMessage" model="Model.StatusMessage" />
+                                <p>
+                                    @Model.StatusMessage
+                                </p>
                             </div>
                         </div>
                     </div>
