Fix Error in Page when redirecting, Fix Email Sender in some pages still had interface IEmailSender turn into IEmailNotificationService, Added EmailConfiguration to appsettings.json

--- a/Core/OpenCRM.Core.Web/Areas/Identity/Pages/Auth/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Identity/Pages/Auth/Index.cshtml
@@ -46,7 +46,7 @@
                             </div>
                             <div class="card-footer text-center py-3">
                                 <p>
-                                    <a class="small" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Need an account? Sign up!</a>
+                                    <a class="small" asp-page="Identity/Register" asp-route-returnUrl="@Model.ReturnUrl">Need an account? Sign up!</a>
                                 </p>
                             </div>
                         </div>
