--- a/Core/OpenCRM.Core.Web/Areas/Identity/Pages/ResetPasswordConfirmation/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Identity/Pages/ResetPasswordConfirmation/Index.cshtml
@@ -5,5 +5,5 @@
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Your password has been reset. Please <a asp-page="/login/index">click here to log in</a>.
+    Your password has been reset. Please <a asp-page="/Identity/Auth">click here to log in</a>.
 </p>
