--- a/Core/OpenCRM.Core.Web/Areas/Identity/Pages/ForgotPassword/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Identity/Pages/ForgotPassword/Index.cshtml
@@ -21,13 +21,13 @@
                                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                        <a class="small" href="./Login">Return to login</a>
+                                        <a class="small" href="/Identity/Auth">Return to login</a>
                                         <button type="submit" class="btn btn-primary">Reset Password</button>
                                     </div>
                                 </form>
                             </div>
                             <div class="card-footer text-center py-3">
-                                <div class="small"><a href="./Register">Need an account? Sign up!</a></div>
+                                <div class="small"><a href="/Identity/Register">Need an account? Sign up!</a></div>
                             </div>
                         </div>
                     </div>
