--- a/OpenCRM.Web/Pages/Shared/_Layout.cshtml
+++ b/OpenCRM.Web/Pages/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                                 <li><a class="dropdown-item" asp-area="Finance" asp-page="/Accounting/Index">Finance Accounting</a></li>
                                 <li><a class="dropdown-item" asp-area="Identity" asp-page="/Register/Index">Register</a></li>
                                 <li><a class="dropdown-item" asp-area="Identity" asp-page="/Auth/Index">LoginA</a></li>
+                                <li><a class="dropdown-item" asp-area="SwissLDP" asp-page="/Supplier/Register">Register supplier</a></li>
                             </ul>
                         </li>
                         
