--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Supplier/Register.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Supplier/Register.cshtml
@@ -11,34 +11,44 @@
                 <form method="post" class="d-flex flex-column align-items-center justify-content-center">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="w-100 form-floating mb-3">
-                        <input asp-for="InputRole.Name" class="form-control" placeholder="Name" />
-                        <label asp-for="InputRole.Name" class="control-label"></label>
-                        <span asp-validation-for="InputRole.Name" class="text-danger"></span>
+                        <input asp-for="InputUser.Name" class="form-control" placeholder="Name" />
+                        <label asp-for="InputUser.Name" class="control-label"></label>
+                        <span asp-validation-for="InputUser.Name" class="text-danger"></span>
                     </div>
                     <div class="w-100 form-floating mb-3">
-                        <input asp-for="InputRole.Address" class="form-control" placeholder="Address"/>
-                        <label asp-for="InputRole.Address" class="control-label"></label>
-                        <span asp-validation-for="InputRole.Address" class="text-danger"></span>
+                        <input asp-for="InputRoleData.Address" class="form-control" placeholder="Address"/>
+                        <label asp-for="InputRoleData.Address" class="control-label"></label>
+                        <span asp-validation-for="InputRoleData.Address" class="text-danger"></span>
                     </div>
                     <div class="w-100 form-floating mb-3">
-                        <input asp-for="InputRole.Email" class="form-control" placeholder="Email"/>
-                        <label asp-for="InputRole.Email" class="control-label"></label>
-                        <span asp-validation-for="InputRole.Email" class="text-danger"></span>
+                        <input asp-for="InputUser.Email" class="form-control" placeholder="Email" />
+                        <label asp-for="InputUser.Email" class="control-label"></label>
+                        <span asp-validation-for="InputUser.Email" class="text-danger"></span>
                     </div>
                     <div class="w-100 form-floating mb-3">
-                        <input asp-for="InputRole.Phone" class="form-control" placeholder="Phone"/>
-                        <label asp-for="InputRole.Phone" class="control-label"></label>
-                        <span asp-validation-for="InputRole.Phone" class="text-danger"></span>
+                        <input asp-for="InputRoleData.Phone" class="form-control" placeholder="Phone"/>
+                        <label asp-for="InputRoleData.Phone" class="control-label"></label>
+                        <span asp-validation-for="InputRoleData.Phone" class="text-danger"></span>
                     </div>
                     <div class="w-100 form-floating mb-3">
-                        <input asp-for="InputRole.Mobile" class="form-control" placeholder="Mobile" />
-                        <label asp-for="InputRole.Mobile" class="control-label"></label>
-                        <span asp-validation-for="InputRole.Mobile" class="text-danger"></span>
+                        <input asp-for="InputRoleData.Mobile" class="form-control" placeholder="Mobile" />
+                        <label asp-for="InputRoleData.Mobile" class="control-label"></label>
+                        <span asp-validation-for="InputRoleData.Mobile" class="text-danger"></span>
                     </div>
                     <div class="w-100 form-floating mb-3">
-                        <input asp-for="InputRole.CHECode" class="form-control" placeholder="CHE IVA Code" />
-                        <label asp-for="InputRole.CHECode" class="control-label"></label>
-                        <span asp-validation-for="InputRole.CHECode" class="text-danger"></span>
+                        <input asp-for="InputRoleData.CHECode" class="form-control" placeholder="CHE IVA Code" />
+                        <label asp-for="InputRoleData.CHECode" class="control-label"></label>
+                        <span asp-validation-for="InputRoleData.CHECode" class="text-danger"></span>
+                    </div>
+                    <div class="w-100 form-floating mb-3">
+                        <input asp-for="InputUser.Password" class="form-control" placeholder="Password" />
+                        <label asp-for="InputUser.Password" class="control-label"></label>
+                        <span asp-validation-for="InputUser.Password" class="text-danger"></span>
+                    </div>
+                    <div class="w-100 form-floating mb-3">
+                        <input asp-for="InputUser.ConfirmPassword" class="form-control" placeholder="Confirm password" />
+                        <label asp-for="InputUser.ConfirmPassword" class="control-label"></label>
+                        <span asp-validation-for="InputUser.ConfirmPassword" class="text-danger"></span>
                     </div>
                     <div class="w-100 mt-4 mb-0">
                         <div class="d-grid">
@@ -50,7 +60,7 @@
                     {
                         <div class="mt-4">
                             <p class="text-danger fw-bold">
-                                ! Error: Supplier with code @Model.InputRole.CHECode already exist !
+                                ! Error: Supplier already exist !
                             </p>
                         </div>
                     }
