Add Language Module

--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Index.cshtml
@@ -1,5 +1,14 @@
 ﻿@page
 @model OpenCRM.Core.Web.Areas.Manage.Pages.Languages.IndexModel
 @{
+    ViewData["Title"] = "Index";
+    Layout = "_CoreLayout";
 }
-<h1>Implement Core Web Management Module Languages Here</h1>
+
+<component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
+
+<component type="typeof(OpenCRM.Core.Web.Components.Table.Table)" render-mode="ServerPrerendered"
+           param-title="Model.Title"
+           param-page="Model.TablePage"
+           param-rows="Model.TableRows"
+           param-headers="Model.TableHeaders" />
