--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Shared/_CoreLayout.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Shared/_CoreLayout.cshtml
@@ -34,10 +34,12 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-area="Manage" asp-page="/Index">Management</a></li>
+                                <li><a class="dropdown-item" asp-area="Manage" asp-page="/Languages/Index">Management Languages</a></li>
+                                <li><a class="dropdown-item" asp-area="Manage" asp-page="/Translations/Index">Management Translations</a></li>
                                 <li><a class="dropdown-item" asp-area="SwissLDP" asp-page="/Index">Swiss LDP</a></li>
                                 <li><a class="dropdown-item" asp-area="SwissLDP" asp-page="/Event/Index">Swiss LDP Events</a></li>
                                 <li><a class="dropdown-item" asp-area="Finance" asp-page="/Index">Finance</a></li>
-                                <li><a class="dropdown-item" asp-area="Finance" asp-page="/Accounting/Index">Finance Accounting</a></li>
+                                <li><a class="dropdown-item" asp-area="Finance" asp-page="/Accounting/Index">Finance Accounting</a></li>                                
                             </ul>
                         </li>
                         
