--- a/Core/OpenCRM.Core.Web/Components/Table/Table.razor
+++ b/Core/OpenCRM.Core.Web/Components/Table/Table.razor
@@ -10,8 +10,9 @@
         </div>
     </div>
     <div class="card-body">
-        <table id="datatablesSimple">
-            <thead>
+        <div class="table-responsive" style="height: 550px; overflow-y: scroll;">
+            <table id="datatablesSimple" class="table">
+             <thead>
                 <tr>
                     @foreach(var item in Headers)
                     {
@@ -23,7 +24,7 @@
                     <th></th>
                     <th></th>
                 </tr>
-            </thead>
+             </thead>
             <tbody>
                 @foreach(var row in Rows)
                 {
@@ -46,7 +47,8 @@
                     </tr>
                 }
             </tbody>
-        </table>
+          </table>
+        </div>
     </div>
 </div>
 
