--- a/Modules/OpenCRM.Finance/Areas/Finance/Pages/Accounting/Delete.cshtml
+++ b/Modules/OpenCRM.Finance/Areas/Finance/Pages/Accounting/Delete.cshtml
@@ -2,6 +2,7 @@
 @model OpenCRM.Finance.Areas.Finance.Pages.Accounting.DeleteModel
 @{
     ViewData["Title"] = "Delete";
+    Layout = "_CoreLayout";
 }
 
 <div class="container-fluid">
@@ -38,9 +39,6 @@
                         </div>
                     </div>
                 </form>
-            </div>
-            <div class="card-footer text-center py-3">
-                <a asp-page="./Index">Back to List</a>
             </div>
         </div>
     </div>
