--- a/Modules/OpenCRM.Finance/Areas/Finance/Pages/Accounting/Details.cshtml
+++ b/Modules/OpenCRM.Finance/Areas/Finance/Pages/Accounting/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model OpenCRM.Finance.Areas.Finance.Pages.Accounting.DetailsModel
 @{
-	ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details";
+    Layout = "_CoreLayout";
 }
 
 <div class="container-fluid">
@@ -34,7 +35,7 @@
                 </form>
             </div>
             <div class="card-footer text-center py-3">
-                <a asp-page="./Index">Back to List</a>
+                <a asp-page="./Index" class="btn btn-primary">Back to List</a>
             </div>
         </div>
     </div>
