--- a/Modules/OpenCRM.Finance/Areas/Finance/Pages/Accounting/Edit.cshtml
+++ b/Modules/OpenCRM.Finance/Areas/Finance/Pages/Accounting/Edit.cshtml
@@ -2,6 +2,7 @@
 @model OpenCRM.Finance.Areas.Finance.Pages.Accounting.EditModel
 @{
     ViewData["Title"] = "Edit";
+    Layout = "_CoreLayout";
 }
 
 <div class="container-fluid">
@@ -35,9 +36,6 @@
                         </div>
                     </div>
                 </form>
-            </div>
-            <div class="card-footer text-center py-3">
-                <a asp-page="./Index">Back to List</a>
             </div>
         </div>
     </div>
