--- a/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
@@ -5,69 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - OpenCRM.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="_content/OpenCRM.Core.Web/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OpenCRM.Web.styles.css" asp-append-version="true" />
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-    <link href="~/css/styles.css" rel="stylesheet" />
+    <link href="_content/OpenCRM.Core.Web/css/styles.css" rel="stylesheet" />
+    @*<link href="_content/OpenCRM.Core.Web/css/navbar.css" rel="stylesheet" />*@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-white border-bottom box-shadow mb-3 bg-primary">
-            <div class="container-fluid d-flex align-items-center">
-                <div class="d-flex">
-                    <a class="navbar-brand" asp-area="" asp-page="/Index">
-                        <img src="_content/OpenCRM.Core.Web/images/logo.png" alt="OpenDHS" width="64" height="32">
-                    </a>
-
-                    <div class="navbar-collapse collapse d-sm-inline-flex">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Modules
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" asp-area="Manage" asp-page="/Index">Management</a></li>
-                                    <li><a class="dropdown-item" asp-area="SwissLDP" asp-page="/Index">Swiss LDP</a></li>
-                                    <li><a class="dropdown-item" asp-area="SwissLDP" asp-page="/Event/Index">Swiss LDP Events</a></li>
-                                    <li><a class="dropdown-item" asp-area="Finance" asp-page="/Index">Finance</a></li>
-                                    <li><a class="dropdown-item" asp-area="Finance" asp-page="/Accounting/Index">Finance Accounting</a></li>
-                                    <li><a class="dropdown-item" asp-area="Identity" asp-page="/Register/Index">Register</a></li>
-                                    <li><a class="dropdown-item" asp-area="Identity" asp-page="/Auth/Index">Login</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
-
-                <div class="d-flex align-items-center text-center">
-                    user@@email.com
-                    <div class="navbar-collapse collapse d-sm-inline-flex">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="dropdown p-1">
-                                <button class="btn btn-outline-light text-center ms-2" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" type="button">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="navbarDropdown">
-                                    <li class="d-flex justify-content-center mb-2">
-                                        <div style="width:50px; height:50px; border: 1px solid gray; border-radius:50px">
-                                        </div>
-                                    </li>
-
-                                    <li class="dropdown-item">Name Lastname</li>
-                                    <li class="dropdown-item">user@@email.com</li>
-                                    <li class="dropdown-item">Edit Profile</li>
-                                    <li class="dropdown-item">Logout</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <component type="typeof(OpenCRM.Core.Web.Components.Navbar)" render-mode="ServerPrerendered" param-links="Model.Links"/>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
