--- a/Modules/OpenCRM.Finance/Areas/Finance/_ViewImports.cshtml
+++ b/Modules/OpenCRM.Finance/Areas/Finance/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿
-@using OpenCRM.Core.Web.Pages
+﻿@using OpenCRM.Core.Web.Pages
+@using OpenCRM.Core.Web.Pages.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
