Update Identity Area to use CorePageModel

--- a/Core/OpenCRM.Core.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using OpenCRM.Core.Web.Components
 @using OpenCRM.Core.Web.Pages
 @using OpenCRM.Core.Web.Pages.Shared
+@using OpenCRM.Core.Web.Models;
 @namespace OpenCRM.Core.Web.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
