--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Index.cshtml
@@ -4,9 +4,4 @@
     ViewData["Title"] = "Index";
 }
 
-<component type="typeof(OpenCRM.Core.Web.Components.Table.Table)" render-mode="ServerPrerendered" 
-    param-title="Model.Table.Title"
-    param-page="Model.Table.TablePage"
-    param-rows="Model.Table.TableRows"
-    param-headers="Model.Table.TableHeaders" 
-/>
+<component type="typeof(OpenCRM.Core.Web.Components.Table.Table)" render-mode="ServerPrerendered" param-tableData="Model.Table"/>
