--- a/Modules/OpenCRM.Finance/Areas/Finance/_ViewImports.cshtml
+++ b/Modules/OpenCRM.Finance/Areas/Finance/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-﻿@using OpenCRM.Core.Web.Pages
+﻿@using OpenCRM.Core.Web
+@using OpenCRM.Core.Web.Components
+@using OpenCRM.Core.Web.Pages
 @using OpenCRM.Core.Web.Pages.Shared
+@namespace OpenCRM.Finance
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
