--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -5,17 +5,23 @@
             <a class="navbar-brand" href="/Index">
                 <img src="_content/OpenCRM.Core.Web/images/logo.png" alt="OpenDHS" width="64" height="32">
             </a>
-            <div class="navbar-collapse collapse d-sm-inline-flex">
+            <div class="navbar-collapse collapse d-sm-inline-flex me-2">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item dropdown">
                         <DropdownMenu Menu="@DropdownMenuModules"/>
                     </li>
                 </ul>
             </div>
+            <div class="navbar-collapse collapse d-sm-inline-flex">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item dropdown" id="dropdown-submenu">
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <BreadCrumb Links="@Links"/>
-
+        
         <div class="d-flex align-items-center text-center">
             <div class="navbar-collapse collapse d-sm-inline-flex">
                 user@@email.com
