Add BreadCrumb to the finance module

--- a/Modules/OpenCRM.Finance/Areas/Finance/Pages/Index.cshtml
+++ b/Modules/OpenCRM.Finance/Areas/Finance/Pages/Index.cshtml
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1>Implement finance module here</h1>
+    <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
 </body>
 </html>
