Only Main Module Can Be Active

--- a/Core/OpenCRM.Core.Web/Components/DropdownMenu/DropdownMenu.razor
+++ b/Core/OpenCRM.Core.Web/Components/DropdownMenu/DropdownMenu.razor
@@ -5,7 +5,7 @@
         @Menu.Name
     </a>
 
-    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown" style="margin-top: 1.3rem">
         @foreach (var item in Menu.Items)
         {
             if (item.ShowItemList)
