Update Identity Pages & Services

--- a/Core/OpenCRM.Core.Web/Pages/Identity/Register/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Identity/Register/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model OpenCRM.Core.Web.Pages.Identity.Register.IndexModel
 @{
+    Layout = "_CoreEmptyLayout";
 }
 
 <div class="container">
