Update partiallya auth worlflow

--- a/Core/OpenCRM.Core.Web/Pages/Identity/Login/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Identity/Login/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
-@model OpenCRM.Core.Web.Areas.Identity.Pages.Login.IndexModel
+@model OpenCRM.Core.Web.Pages.Identity.Login.IndexModel
 @{
+    Layout = "_CoreEmptyLayout";
 }
 <div id="layoutAuthentication">
     <div id="layoutAuthentication_content">
