Update EmailService, Settings and Registration Workflow

--- a/Core/OpenCRM.Core.Web/Pages/Identity/ConfirmEmail/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Identity/ConfirmEmail/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model OpenCRM.Core.Web.Pages.Identity.ConfirmEmail.IndexModel
 @{
+    Layout = "_CoreEmptyLayout";
 }
 
 <div id="layoutAuthentication">
