--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -29,6 +29,8 @@
 
         <BreadCrumb Links="@Links" />
 
+        @*<Description DescriptionModel="@DescriptionItem" />*@
+
         <div class="d-flex align-items-center text-center">
             <div class="navbar-collapse collapse d-sm-inline-flex">
                 @UserName
