Update Create.cshtml in Block

--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -21,16 +21,18 @@
                         <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
+                        <input asp-for="Description" class="form-control" placeholder="Description" />
                         <label asp-for="Description" class="control-label"></label>
-                        <input asp-for="Description" class="form-control" placeholder="Description" style="height:20rem;" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <label for="formFile" class="form-label">Image</label>
-                        <input asp-for="Model.Image" class="form-control" type="file" accept="image/*" id="formFile">
+                        <label asp-for="Model.Image" class="form-label"></label>
+                        <input asp-for="Model.Image" class="form-control" type="file" accept="image/*">
+                        <span asp-validation-for="Model.Image" class="text-danger"></span>
                     </div>
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
-                            <input type="submit" value="Create" class="btn btn-primary btn-block" />
+                            <input type="submit" value="Create" class="btn btn-primary btn-block"/>
                         </div>
                     </div>
                 </form>
