--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
@@ -27,7 +27,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="formFile" class="form-label">Image</label>
-                        <input asp-for="Model.Image" class="form-control" type="file" accept="image/*" id="formFile">
+                        <input asp-for="ImageName" class="form-control" type="file" accept="image/*" id="formFile">
                     </div>
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
