--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -21,14 +21,14 @@
                         <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Description" class="form-control" placeholder="Description" />
-                        <label asp-for="Description" class="control-label"></label>
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                        <input asp-for="Model.Description" class="form-control" placeholder="Description" />
+                        <label asp-for="Model.Description" class="control-label"></label>
+                        <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <label asp-for="Model.Image" class="form-label"></label>
-                        <input asp-for="Model.Image" class="form-control" type="file" accept="image/*">
-                        <span asp-validation-for="Model.Image" class="text-danger"></span>
+                        <label asp-for="ImageName" class="form-label"></label>
+                        <input asp-for="ImageName" class="form-control" type="file" accept="image/*">
+                        <span asp-validation-for="ImageName" class="text-danger"></span>
                     </div>
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
