--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Details.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Details.cshtml
@@ -26,9 +26,9 @@
                         <span asp-validation-for="Model.Data.Description" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.Data.Image" class="form-control" readonly />
-                        <label asp-for="Model.Data.Image" class="control-label"></label>
-                        <span asp-validation-for="Model.Data.Image" class="text-danger"></span>
+                        <input asp-for="ImageName" class="form-control" readonly />
+                        <label asp-for="ImageName" class="control-label"></label>
+                        <span asp-validation-for="ImageName" class="text-danger"></span>
                     </div>
                 </form>
             </div>
