--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Media/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Media/Edit.cshtml
@@ -7,33 +7,31 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
-            <div class="card-header"><h3 class="text-center font-weight-light my-4">Edit Media</h3></div>
+            <div class="card-header">
+                <h3 class="text-center font-weight-light my-4">Edit Media</h3>
+            </div>
             <div class="card-body">
                 <form method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="row justify-content-between">
+                        <div class="col-6">
+                            <input asp-for="UploadedFile" type="file" class="form-control" />
+                        </div>
                         <div class="col-4">
                             <input asp-for="Model.FileName" class="form-control" placeholder="File Name" />
-                            @* <label asp-for="Model.FileName" class="control-label"></label> *@
                             <span asp-validation-for="Model.FileName" class="text-danger"></span>
                         </div>
                         <div class="col-2">
                             <input asp-for="Model.IsPublic" class="form-check-input" />
                             <label asp-for="Model.IsPublic" class="form-check-label"></label>
-                            <span asp-validation-for="Model.IsPublic" class="text-danger"></span>
+                            @* <span asp-validation-for="Model.IsPublic" class="text-danger"></span> *@
                         </div>
-
-                        <div class="col-6">
-                            @* <label asp-for="UploadedFile" class="form-label"></label> *@
-                            <input asp-for="UploadedFile" type="file" class="form-control" data-msg-invalid-file="Select File" />
-                            <span asp-validation-for="UploadedFile" class="text-danger"></span>
-                        </div>
+                       
                     </div>
                     <div class="form-group" style="margin-top: 10px;">
                         <input type="submit" value="Edit" class="btn btn-primary" />
                         <a asp-page="./Index" class="btn btn-secondary">Cancel</a>
                     </div>
-
                 </form>
             </div>
         </div>
