Add Identity Logout Feature

--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -50,14 +50,14 @@
                             </li>
 
                             <li class="dropdown-item">Name Lastname</li>
-                            <li class="dropdown-item"> @UserName</li>
+                            <li class="dropdown-item">@UserName</li>
 
                             <li class="dropstart">
                                 <DropdownMenu Menu="@DropdownMenuModules" />
                             </li>
 
                             <li class="dropdown-item">Edit Profile</li>
-                            <li class="dropdown-item">Logout</li>
+                            <li><a class="dropdown-item" href="/Identity/Logout">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
