Add user name & lastname on navbar

--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -49,7 +49,7 @@
                                 </div>
                             </li>
 
-                            <li class="dropdown-item">Name Lastname</li>
+                            <li class="dropdown-item">@Name</li>
                             <li class="dropdown-item">@UserName</li>
 
                             <li class="dropstart">
