--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -26,8 +26,8 @@
                         <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <label asp-for="Description" class="control-label"></label>
-                        <input asp-for="Description" class="form-control" placeholder="Description" style="height:20rem;" />
+                        <label asp-for="Model.Description" class="control-label"></label>
+                        <input asp-for="Model.Description" class="form-control" placeholder="Description" style="height:20rem;" />
                     </div>
                     <div class="mb-3">
                         <input asp-for="FileData" type="file" class="form-control" data-msg-invalid-file="select file" accept="image/*"/>
