--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Delete.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Delete.cshtml
@@ -23,7 +23,12 @@
                         <input asp-for="Language.Name" class="form-control" readonly />
                         <label asp-for="Language.Name" class="control-label"></label>
                         <span asp-validation-for="Language.Name" class="text-danger"></span>
-                    </div>                   
+                    </div>
+                    <label asp-for="Language.Translations" class="control-label" readonly></label>
+                    <div class="form-floating mb-3">
+                        <textarea asp-for="Language.Translations" class="form-control, text-danger " style="height: 15rem; width: 100%;" disabled></textarea>
+                        <span asp-validation-for="Language.Translations" class="text-danger"></span>
+                    </div>
                 </form>
                 <form method="post">
                     <input type="hidden" asp-for="Language.ID" />
